postgres/k8s-manifest/deny-all-postgres.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-deny-all
  namespace: postgres-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
